--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
     "name": "chenhaoran/edis-php-client",
     "description": "edis php client",
+    "keywords": [
+        "swagger",
+        "php",
+        "sdk",
+        "api"
+    ],
+    "homepage": "http://swagger.io",
+    "license": "proprietary",
     "authors": [
         {
             "name": "chenhaoran",
@@ -8,6 +16,23 @@
         }
     ],
     "require": {
-      "/": "*@dev"
+        "php": ">=5.5",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "guzzlehttp/guzzle": "^6.2",
+        "/": "*@dev"
+    },
+    
+    "require-dev": {
+        "phpunit/phpunit": "^4.8",
+        "squizlabs/php_codesniffer": "~2.6",
+        "friendsofphp/php-cs-fixer": "~1.12"
+    },
+    "autoload": {
+        "psr-4": { "Swagger\\Client\\" : "lib/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Swagger\\Client\\" : "test/" }
     }
 }
