--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2",
-        "/": "*@dev"
+        "guzzlehttp/guzzle": "^6.2"
     },
     
     "require-dev": {
