--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "chenhaoran/edis-php-client",
-    "description": "edis php client",
+    "name": "/",
+    "description": "",
     "keywords": [
         "swagger",
         "php",
@@ -11,8 +11,8 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "chenhaoran",
-            "email": "chrloveyou@126.com"
+            "name": "Swagger and contributors",
+            "homepage": "https://github.com/swagger-api/swagger-codegen"
         }
     ],
     "require": {
@@ -22,7 +22,6 @@
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^6.2"
     },
-    
     "require-dev": {
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "~2.6",
